# launchpad-mk1-macropad

./: .gitignore  BUILD_GUI.txt  CMakeLists-gui.txt  CMakeLists.txt  README.md  launc-macro  launc-macro-gui
assets/: app.rc
gui/: CMakeLists.txt
src/: audio.c  audio.h  colours.c  colours.h  config.c  config.h  gif.c  gif.h  keys.c  keys.h  main.c  midi.c  midi.h
src/gui/: app.c  app.h  main_gui.c  theme.c  theme.h
